[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grovectl"
version = "0.1.0"
description = "CLI tool for managing macOS VMs via SSH on remote hosts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
keywords = ["cli", "vm", "macos", "ssh", "virtualization", "tart"]

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "paramiko>=3.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "mypy>=1.5.0",
    "ruff>=0.8.0",
    "pre-commit>=3.0.0",
    "types-paramiko>=3.0.0",
    "types-PyYAML>=6.0.0",
    "nox>=2024.0.0",
    "nox-uv>=0.1.0",
    "build>=1.0.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
]

# PEP 735 dependency groups (for uv)
[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "mypy>=1.5.0",
    "ruff>=0.8.0",
    "pre-commit>=3.0.0",
    "types-paramiko>=3.0.0",
    "types-PyYAML>=6.0.0",
    "nox>=2024.0.0",
    "nox-uv>=0.1.0",
    "build>=1.0.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
grovectl = "grovectl.cli.main:cli"

[project.urls]
Homepage = "https://github.com/yourusername/grovectl"
Documentation = "https://github.com/yourusername/grovectl#readme"
Repository = "https://github.com/yourusername/grovectl"
Issues = "https://github.com/yourusername/grovectl/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/grovectl"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # do not perform function calls in argument defaults
    "B904",    # raise from in except clause (not always needed)
    "B905",    # zip without explicit strict
    "SIM105",  # contextlib.suppress vs try-except-pass (stylistic)
    "SIM108",  # ternary operator vs if-else (stylistic, if-else often more readable)
    "PLC0415", # import not at top-level (used for lazy loading/avoiding circular imports)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "RUF001",  # ambiguous unicode (intentional use of info icon)
    "RUF034",  # useless if-else (false positive on type narrowing)
]

[tool.ruff.lint.isort]
known-first-party = ["grovectl"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",     # unused arguments in fixtures
    "PLR2004", # magic values in tests are fine
]
"src/grovectl/cli/**/*.py" = [
    "ARG001",  # unused ctx argument in Click commands is common
]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "paramiko.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/grovectl"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
show_missing = true
